fix: image overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -335,6 +335,7 @@ figure {
 img,
 svg {
   vertical-align: middle;
+  width: 100%;
 }
 
 table {
